@@ -111,6 +111,58 @@ void CWptIconManager::init()
     wptIcons["Start"]               = icon_t("://icons/waypoints/32x32/Start.png", 16, 16);
     wptIcons["End"]                 = icon_t("://icons/waypoints/32x32/End.png", 16, 16);
 
+    wptIcons["Bank"]                = icon_t("://icons/poi/png/money_bank.n.32.png", 16, 16);
+    wptIcons["Gas Station"]         = icon_t("://icons/poi/png/transport_fuel.n.32.png", 16, 16);
+    wptIcons["Restaurant"]          = icon_t("://icons/poi/png/food_restaurant.n.32.png", 16, 16);
+    wptIcons["Bar"]                 = icon_t("://icons/poi/png/food_bar.n.32.png", 16, 16);
+    wptIcons["Shipwreck"]           = icon_t("://icons/poi/png/tourist_wreck.n.32.png", 16, 16);
+    wptIcons["Boat Ramp"]           = icon_t("://icons/poi/png/transport_slipway.n.32.png", 16, 16);
+    wptIcons["Campground"]          = icon_t("://icons/poi/png/accommodation_camping.n.32.png", 16, 16);
+    wptIcons["Restroom"]            = icon_t("://icons/poi/png/amenity_toilets.n.32.png", 16, 16);
+    wptIcons["Drinking Water"]      = icon_t("://icons/poi/png/food_drinkingtap.n.32.png", 16, 16);
+    wptIcons["Telephone"]           = icon_t("://icons/poi/png/amenity_telephone.n.32.png", 16, 16);
+    wptIcons["Medical Facility"]    = icon_t("://icons/poi/png/health_hospital.n.32.png", 16, 16);
+    wptIcons["Information"]         = icon_t("://icons/poi/png/tourist_information.n.32.png", 16, 16);
+    wptIcons["Parking Area"]        = icon_t("://icons/poi/png/transport_parking.n.32.png", 16, 16);
+    wptIcons["Picnic Area"]         = icon_t("://icons/poi/png/tourist_picnic.n.32.png", 16, 16);
+    wptIcons["Scenic Area"]         = icon_t("://icons/poi/png/tourist_view_point.n.32.png", 16, 16);
+    wptIcons["Swimming Area"]       = icon_t("://icons/poi/png/sport_swimming_outdoor.n.32.png", 16, 16);
+    wptIcons["Dam"]                 = icon_t("://icons/poi/png/water_dam.n.32.png", 16, 16);
+    wptIcons["Shopping Center"]     = icon_t("://icons/poi/png/shopping_supermarket.n.32.png", 16, 16);
+    wptIcons["Lodging"]             = icon_t("://icons/poi/png/accommodation_hotel.n.32.png", 16, 16);
+    wptIcons["Mine"]                = icon_t("://icons/poi/png/poi_mine.n.32.png", 16, 16);
+    wptIcons["Car Rental"]          = icon_t("://icons/poi/png/transport_rental_car.n.32.png", 16, 16);
+    wptIcons["Car Repair"]          = icon_t("://icons/poi/png/shopping_car_repair.n.32.png", 16, 16);
+    wptIcons["Fast Food"]           = icon_t("://icons/poi/png/food_fastfood.n.32.png", 16, 16);
+    wptIcons["Fitness Center"]      = icon_t("://icons/poi/png/sport_gym.n.32.png", 16, 16);
+    wptIcons["Museum"]              = icon_t("://icons/poi/png/tourist_museum.n.32.png", 16, 16);
+    wptIcons["Pharmacy"]            = icon_t("://icons/poi/png/health_pharmacy.n.32.png", 16, 16);
+    wptIcons["Pizza"]               = icon_t("://icons/poi/png/food_pizza.n.32.png", 16, 16);
+    wptIcons["Post Office"]         = icon_t("://icons/poi/png/amenity_post_office.n.32.png", 16, 16);
+    wptIcons["RV Park"]             = icon_t("://icons/poi/png/accommodation_caravan_park.n.32.png", 16, 16);
+    wptIcons["School"]              = icon_t("://icons/poi/png/education_school.n.32.png", 16, 16);
+    wptIcons["Stadium"]             = icon_t("://icons/poi/png/sport_stadium.n.32.png", 16, 16);
+    wptIcons["Department Store"]    = icon_t("://icons/poi/png/shopping_department_store.n.32.png", 16, 16);
+    wptIcons["Zoo"]                 = icon_t("://icons/poi/png/tourist_zoo.n.32.png", 16, 16);
+    wptIcons["Convenience Store"]   = icon_t("://icons/poi/png/shopping_convenience.n.32.png", 16, 16);
+    wptIcons["Live Theater"]        = icon_t("://icons/poi/png/tourist_theatre.n.32.png", 16, 16);
+    wptIcons["Scales"]              = icon_t("://icons/poi/png/amenity_court.n.32.png", 16, 16);
+    wptIcons["Church"]              = icon_t("://icons/poi/png/place_of_worship_unknown.n.32.png", 16, 16);
+    wptIcons["Ghost Town"]          = icon_t("://icons/poi/png/tourist_ruin.n.32.png", 16, 16);
+    wptIcons["Beach"]               = icon_t("://icons/poi/png/tourist_beach.n.32.png", 16, 16);
+    wptIcons["Forest"]              = icon_t("://icons/poi/png/landuse_coniferous_and_deciduous.n.32.png", 16, 16);
+    wptIcons["Airport"]             = icon_t("://icons/poi/png/transport_airport.n.32.png", 16, 16);
+    wptIcons["Heliport"]            = icon_t("://icons/poi/png/transport_helicopter_pad.n.32.png", 16, 16);
+    wptIcons["Tall Tower"]          = icon_t("://icons/poi/png/poi_tower_communications.n.32.png", 16, 16);
+    wptIcons["Short Tower"]         = icon_t("://icons/poi/png/poi_tower_lookout.n.32.png", 16, 16);
+    wptIcons["Library"]             = icon_t("://icons/poi/png/amenity_library.n.32.png", 16, 16);
+    wptIcons["Ground Transportation"] = icon_t("://icons/poi/png/transport_bus_stop.n.32.png", 16, 16);
+    wptIcons["City Hall"]           = icon_t("://icons/poi/png/amenity_town_hall.n.32.png", 16, 16);
+    wptIcons["Winery"]              = icon_t("://icons/poi/png/shopping_alcohol.n.32.png", 16, 16);
+    wptIcons["Lodge"]               = icon_t("://icons/poi/png/accommodation_shelter.n.32.png", 16, 16);
+    wptIcons["Railway"]             = icon_t("://icons/poi/png/transport_train_station.n.32.png", 16, 16);
+    wptIcons["Parking, Pay"]        = icon_t("://icons/poi/png/transport_parking_car_paid.n.32.png", 16, 16);
+
     setWptIconByName("Traditional Cache", "://icons/geocaching/icons/traditional.png");
     setWptIconByName("Multi-cache", "://icons/geocaching/icons/multi.png");
     setWptIconByName("Unknown Cache", "://icons/geocaching/icons/unknown.png");
