@@ -9,6 +9,7 @@ V1.XX.X
 [QMS-301] Load POI file
 [QMS-303] Add POI icons
 [QMS-311] Automatically save projects to device
+[QMS-315] Make POI Icons User-Selectable
 [QMS-337] Upgrade to Proj 8 API
 
 V1.15.2
